[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/UI/scripts/inventory_manager.gd" type="Script" id=1]
[ext_resource path="res://assets/themes/crafting_menu_theme.tres" type="Theme" id=2]
[ext_resource path="res://assets/fonts/main_font_small.tres" type="DynamicFont" id=3]
[ext_resource path="res://src/UI/scripts/inventory_tab.gd" type="Script" id=4]
[ext_resource path="res://src/UI/hud/item_description.gd" type="Script" id=5]
[ext_resource path="res://src/UI/scripts/crafting_tab.gd" type="Script" id=6]

[sub_resource type="Animation" id=1]
resource_name = "appear"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.277392, 2.82843 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "disappear"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 2.82843, 0.277392 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0, 0 ) ]
}

[node name="inventory_manager" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
rect_scale = Vector2( 0, 0 )
rect_pivot_offset = Vector2( 128, 72 )
script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 2.0
anims/appear = SubResource( 1 )
anims/disappear = SubResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.843137 )

[node name="tabs" type="TabContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 3 )
tab_align = 0

[node name="Inventory" type="Tabs" parent="tabs"]
editor/display_folded = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 18.0
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 3 )
script = ExtResource( 4 )

[node name="HBoxContainer" type="HBoxContainer" parent="tabs/Inventory"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_right = -4.0
margin_bottom = -4.0
custom_constants/separation = 8

[node name="inventory_list" type="ItemList" parent="tabs/Inventory/HBoxContainer"]
margin_right = 120.0
margin_bottom = 122.0
rect_min_size = Vector2( 120, 0 )
theme = ExtResource( 2 )
allow_reselect = true
max_columns = 6
same_column_width = true
fixed_column_width = 16
icon_mode = 0
fixed_icon_size = Vector2( 16, 16 )

[node name="item_info" type="Panel" parent="tabs/Inventory/HBoxContainer"]
editor/display_folded = true
margin_left = 128.0
margin_right = 248.0
margin_bottom = 122.0
rect_min_size = Vector2( 120, 0 )
theme = ExtResource( 2 )
script = ExtResource( 5 )

[node name="item_texture" type="TextureRect" parent="tabs/Inventory/HBoxContainer/item_info"]
margin_left = 8.0
margin_top = 6.0
margin_right = 32.0
margin_bottom = 30.0
rect_min_size = Vector2( 16, 16 )
expand = true

[node name="item_name" type="Label" parent="tabs/Inventory/HBoxContainer/item_info"]
anchor_left = 0.267
anchor_top = 0.148
anchor_right = 0.267
anchor_bottom = 0.148
margin_left = 3.96
margin_top = -12.056
margin_right = 79.96
margin_bottom = 11.944
theme = ExtResource( 2 )
valign = 1

[node name="item_description" type="RichTextLabel" parent="tabs/Inventory/HBoxContainer/item_info"]
anchor_top = 0.213
anchor_right = 1.0
anchor_bottom = 0.836
margin_left = 8.0
margin_top = 8.014
margin_right = -8.0
margin_bottom = -3.992
theme = ExtResource( 2 )
scroll_following = true

[node name="drop" type="Button" parent="tabs/Inventory/HBoxContainer/item_info"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -32.0
margin_top = -20.0
margin_right = -4.0
margin_bottom = -4.0
focus_mode = 0
theme = ExtResource( 2 )
enabled_focus_mode = 0
text = "DROP"
clip_text = true

[node name="equip" type="Button" parent="tabs/Inventory/HBoxContainer/item_info"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -68.0
margin_top = -20.0
margin_right = -36.0
margin_bottom = -4.0
focus_mode = 0
theme = ExtResource( 2 )
enabled_focus_mode = 0
text = "EQUIP"
clip_text = true

[node name="Crafting" type="Tabs" parent="tabs"]
editor/display_folded = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 18.0
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 3 )
script = ExtResource( 6 )

[node name="Panel" type="Panel" parent="tabs/Crafting"]
editor/display_folded = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 2.0
margin_right = -4.0
margin_bottom = -44.0
theme = ExtResource( 2 )

[node name="Label" type="Label" parent="tabs/Crafting/Panel"]
margin_left = 4.0
margin_top = 4.0
margin_right = 120.0
margin_bottom = 16.0
theme = ExtResource( 2 )
text = "Inventory"
valign = 1

[node name="inventory_list" type="ItemList" parent="tabs/Crafting/Panel"]
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 20.0
margin_right = 120.0
margin_bottom = -4.0
rect_min_size = Vector2( 112, 0 )
theme = ExtResource( 2 )
allow_reselect = true
max_columns = 6
same_column_width = true
fixed_column_width = 16
icon_mode = 0
fixed_icon_size = Vector2( 16, 16 )

[node name="Label2" type="Label" parent="tabs/Crafting/Panel"]
margin_left = 128.0
margin_top = 4.0
margin_right = 244.0
margin_bottom = 16.0
theme = ExtResource( 2 )
text = "Craft"
valign = 1

[node name="craft_list" type="ItemList" parent="tabs/Crafting/Panel"]
anchor_bottom = 1.0
margin_left = 128.0
margin_top = 20.0
margin_right = 244.0
margin_bottom = -4.0
rect_min_size = Vector2( 112, 0 )
theme = ExtResource( 2 )
allow_reselect = true
max_columns = 6
same_column_width = true
fixed_column_width = 16
icon_mode = 0
fixed_icon_size = Vector2( 16, 16 )

[node name="Panel2" type="Panel" parent="tabs/Crafting"]
margin_left = 4.0
margin_top = 86.0
margin_right = 208.0
margin_bottom = 122.0
theme = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="craft_message" type="RichTextLabel" parent="tabs/Crafting/Panel2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
theme = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="craft" type="Button" parent="tabs/Crafting"]
margin_left = 216.0
margin_top = 86.0
margin_right = 248.0
margin_bottom = 102.0
theme = ExtResource( 2 )
text = "CRAFT"

[node name="reset" type="Button" parent="tabs/Crafting"]
margin_left = 216.0
margin_top = 106.0
margin_right = 248.0
margin_bottom = 122.0
theme = ExtResource( 2 )
text = "RESET"
[connection signal="tab_changed" from="tabs" to="tabs/Crafting" method="_on_tabs_tab_changed"]
[connection signal="item_selected" from="tabs/Inventory/HBoxContainer/inventory_list" to="tabs/Inventory" method="_on_inventory_list_item_selected"]
[connection signal="pressed" from="tabs/Inventory/HBoxContainer/item_info/drop" to="tabs/Inventory" method="_on_drop_pressed"]
[connection signal="pressed" from="tabs/Inventory/HBoxContainer/item_info/equip" to="tabs/Inventory" method="_on_equip_pressed"]
[connection signal="item_activated" from="tabs/Crafting/Panel/inventory_list" to="tabs/Crafting" method="_on_inventory_list_item_activated"]
[connection signal="item_activated" from="tabs/Crafting/Panel/craft_list" to="tabs/Crafting" method="_on_craft_list_item_activated"]
[connection signal="pressed" from="tabs/Crafting/craft" to="tabs/Crafting" method="_on_craft_pressed"]
[connection signal="pressed" from="tabs/Crafting/reset" to="tabs/Crafting" method="_on_reset_pressed"]
